--- a/index.html
+++ b/index.html
@@ -4,7 +4,152 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- подключили стили в указанном порядке -->
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <!-- добавил от себя фавикон -->
+    <link rel="icon" href="./images/favicon-my.ico">
   </head>
-  <body></body>
+  <body>
+    <!-- секция с заголовком сайта -->
+    <header class="header">
+      <!-- навигация по сайту -->
+      <div class="header__menu">
+        <nav class="header__links-list">
+          <ul class="header__links-list-item">
+            <li class="header__links-list-item_no-bullit">
+              <a href="#main" class="header__link-active">главная</a>
+            </li>
+            <li> 
+              <a href="#lots" class="header__link">посмотреть лоты</a>
+            </li>
+            <li>
+              <a href="#about" class="header__link">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <!-- картинка в заголовке -->
+      <div class="header__logo">
+        <a>
+          <img class="header__logo-image" src="./images/logo-black.svg" alt="Вопрос, застявляющий задуматься о том, продолжать ли дальше">
+        </a>
+      </div>
+      <!-- адрес -->
+      <address class="header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+    </header>
+    <!-- секция с телом сайта -->
+    <main>
+      <!-- секция 1 "Главный раздел"-->
+      <section class="cover">
+        <h1 class="cover__title">
+            <span class="aligned-text_left">
+              О<span class="letter-spacing-extended">н</span><span class="no-letter-spacing">о</span>
+            </span>
+            <span class="aligned-text_center">
+              Те<span class="letter-spacing-extended">б</span><span class="no-letter-spacing">е</span>
+            </span>
+            <span class="aligned-text_right">
+              <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
+            </span>
+        </h1>
+        <div class="cover__description">
+              <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+              <button class="bet-button" type="button">Сделать ставку</button>
+        </div>
+        <div class="overlay"></div>
+      </section>
+      <!-- секция 2 "Лоты"-->
+      <section class="lots">
+        <h2 class="lots__heading" id="lots">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item card_type_film">
+                <a href="" class="card-link">
+                    <article class="card">
+                      <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
+                      <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                    </article>
+                </a>
+                <div class="overlay"></div>
+          </li>
+          <li class="lots__card-list-item card_type_book">
+                <a href="" class="card-link">
+                  <article class="card">
+                    <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                    <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                 </article>
+                </a>
+                <div class="overlay"></div>
+          </li>
+          <li class="lots__card-list-item card_type_picture">
+                <a href="" class="card-link">
+                  <article class="card">
+                    <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                    <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                  </article>
+                </a>
+                <div class="overlay"></div>
+          </li>
+        </ul>
+        <div class="lots__look-more-link">
+          <a href="#more">посмотреть больше</a>
+        </div>
+      </section>
+      <!-- секция 3 "Об аукционе"-->
+      <section class="about">
+        <div class="logo__column">
+          <div class="about__logo">
+            <img class="about__logo-image" src="./images/logo-white.svg" alt="Логотип белыми буквами на черном фоне Оно тебе надо">
+          </div>
+        </div>
+        <article class="about__column">
+          <h2 class="about__title" id="about">Об аукционе</h2>
+          <div class="about__text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+          </div>
+        </article>
+      </section>
+    </main>
+    <!-- секция с подвалом сайта -->
+    <footer class="footer">
+      <address class="footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </address>
+      <div class="footer__menu">
+        <nav class="footer__menu-list">
+          <ul class="footer__menu-list-item">
+            <li>
+              <a href="#main" class="footer__menu-link_active">главная</a>
+            </li>
+            <li> 
+              <a href="#lots" class="footer__menu-link">посмотреть лоты</a>
+            </li>
+            <li>
+              <a href="#about" class="footer__menu-link">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__social-list">
+        <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
+            <img class="footer__social-icon" src="./images/yt.svg" width="48" height="48" alt="Социальная сеть Youtube">
+        </a>
+        <a href="https://vk.com/" class="footer__social-link" target="_blank">
+            <img class="footer__social-icon" src="./images/vk.svg" width="48" height="48" alt="Социальная сеть ВКонтакте">
+        </a>
+        <a href="https://ru.pinterest.com/" class="footer__social-link" target="_blank">
+            <img class="footer__social-icon" src="./images/pinterest.svg" width="48" height="48" alt="Социальная сеть Pinterest">
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
