--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           </ul>
         </nav>
       </div>
-      <ul class="footer__social-list">
+      <div class="footer__social-list">
         <a href="https://www.youtube.com/" class="footer__social-link" target="_blank">
             <img class="footer__social-icon" src="./images/yt.svg" width="48" height="48" alt="Социальная сеть Youtube">
         </a>
@@ -155,7 +155,7 @@
         <a href="https://ru.pinterest.com/" class="footer__social-link" target="_blank">
             <img class="footer__social-icon" src="./images/pinterest.svg" width="48" height="48" alt="Социальная сеть Pinterest">
         </a>
-      </ul>
+      </div>
     </footer>
   </body>
 </html>
